# requests_httpx

./: .gitignore  evolucao.py  evolucao_v2.py  exemplo_01.py  pyproject.toml
